--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
   </div>
 
 
-  <script src="../../js/main/app.js"></script>
+  <script src="./js/main/app.js"></script>
   <script>
     let swiper1 = new Swiper('.swiper1', {
       spaceBetween: 18,
