--- a/profile/secondreadyadress/secondreadyadress.html/index.html
+++ b/profile/secondreadyadress/secondreadyadress.html/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../icons.secondreadyadress/favicon/favicon-16x16.png" />
     <link rel="manifest" href="../icons.secondreadyadress/favicon/site.webmanifest" />
     <link rel="stylesheet" href="../secondreadyadress.style.css/style.css">
+        <link rel="stylesheet" href="../../../css/foo/style.css">
     <title>View of adress</title>
 </head>
 
